--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch db.json --port 3001"
+    "start": "mkdir -p public && json-server --watch db.json --port 3001"
   },
   "author": "",
   "license": "ISC",
